@@ -2,15 +2,32 @@ package com.app.plugin.core.model;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
+
+import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang3.StringUtils;
+
 
 public class Reporting {
 	
 	private String query;
 	private List<Forms> forms;
 	private Plugin plugin;
+	
+	private String reportingquery;
+	private String reportselectQuery;
+	private String reportfromQuery;
+	private String reportwhereQuery;
+	
+	private List<Forms> reportingform;
+	
+	private Boolean allowedQuickSearch;
+	private Boolean allowedReporting;
+	
+	
 
 	public Plugin getPlugin() {
 		return plugin;
@@ -46,10 +63,13 @@ public class Reporting {
 			 File file = new File(this.plugin.getFullPath()+"/query.txt");
 			 if(file.exists()) {
 				 try {
-					queryText	=  Files.readString(Paths.get(file.getAbsolutePath()));
-					queryText   = queryText.trim();
+					 
+					//queryText	=  Files.readString(Paths.get(file.getAbsolutePath()));
+					 queryText = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+					 
+						
+					 queryText   = queryText.trim();
 				} catch (IOException e) {
-				
 					e.printStackTrace();
 				}
 				 
@@ -57,6 +77,127 @@ public class Reporting {
 		
 		}
 		return queryText;
+	}
+
+	
+	public void loadReportQueryFromTxt() {
+		String queryText = null;
+		String reportSelectQuery = this.reportingquery+"selectQuery.txt";
+		String reportFromQuery = this.reportingquery+"fromQuery.txt";
+		String reportWhereQuery = this.reportingquery+"whereQuery.txt";
+		if(this.plugin != null) {
+			 File file = new File(this.plugin.getFullPath()+"/"+reportSelectQuery);
+			 if(file.exists()) {
+				 try {
+					//queryText	=  Files.readString(Paths.get(file.getAbsolutePath()));
+					 queryText = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+
+					 
+					queryText = StringUtils.normalizeSpace(queryText);
+					this.reportselectQuery   = queryText.trim();
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+				 
+			 }
+			 
+			 file = new File(this.plugin.getFullPath()+"/"+reportFromQuery);
+			 if(file.exists()) {
+				 try {
+					 
+//					queryText	=  Files.readString(Paths.get(file.getAbsolutePath()));
+					 queryText = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+
+					queryText = StringUtils.normalizeSpace(queryText);
+					
+					
+					
+					this.reportfromQuery   = queryText.trim();
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+				 
+			 }
+		
+			 
+			 file = new File(this.plugin.getFullPath()+"/"+reportWhereQuery);
+			 if(file.exists()) {
+				 try {
+					//queryText	=  Files.readString(Paths.get(file.getAbsolutePath()));
+					 queryText = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+
+					queryText = StringUtils.normalizeSpace(queryText);
+					
+					
+					this.reportwhereQuery   = queryText.trim();
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+				 
+			 }
+		
+		}
+		
+	}
+	
+	
+	
+	
+	
+	public String getReportingquery() {
+		return reportingquery;
+	}
+
+	public void setReportingquery(String reportingquery) {
+		this.reportingquery = reportingquery;
+	}
+
+	public String getReportselectQuery() {
+		return reportselectQuery;
+	}
+
+	public void setReportselectQuery(String reportselectQuery) {
+		this.reportselectQuery = reportselectQuery;
+	}
+
+	public String getReportfromQuery() {
+		return reportfromQuery;
+	}
+
+	public void setReportfromQuery(String reportfromQuery) {
+		this.reportfromQuery = reportfromQuery;
+	}
+
+	public String getReportwhereQuery() {
+		return reportwhereQuery;
+	}
+
+	public void setReportwhereQuery(String reportwhereQuery) {
+		this.reportwhereQuery = reportwhereQuery;
+	}
+
+	public List<Forms> getReportingform() {
+		return reportingform;
+	}
+
+	public void setReportingform(List<Forms> reportingform) {
+		this.reportingform = reportingform;
+	}
+
+	public Boolean getAllowedQuickSearch() {
+		return allowedQuickSearch;
+	}
+
+	public void setAllowedQuickSearch(Boolean allowedQuickSearch) {
+		this.allowedQuickSearch = allowedQuickSearch;
+	}
+
+	public Boolean getAllowedReporting() {
+		return allowedReporting;
+	}
+
+	public void setAllowedReporting(Boolean allowedReporting) {
+		this.allowedReporting = allowedReporting;
 	}
 
 }
